Fixed Scrollbar Height

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,8 +29,7 @@ body {
       background-color: var(--transparent);
       width: 5px;
       margin-left: 2px;
-      border-radius: 2.5px;
-      min-height: 150px;
+      border-radius: 3px;
       transition: background-color 400ms ease-in;
     }
 
